<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.CreateAccountActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/page_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/create_acc_title"
                android:textAlignment="center"
                android:textColor="#0F2851"
                android:textSize="@dimen/login_title_text" />

            <TextView
                android:id="@+id/full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/page_title"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/padding"

                android:layout_marginEnd="@dimen/padding"
                android:text="@string/full_name"
                android:textSize="@dimen/normal_text" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/full_name"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/padding"
                android:layout_marginEnd="@dimen/padding"
                android:hint="@string/create_acc_placeholder_name"

                android:minHeight="@dimen/login_min_height"
                app:startIconDrawable="@drawable/person">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_input"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name_layout"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/padding"
                android:layout_marginTop="@dimen/padding"
                android:text="@string/email"
                android:textSize="@dimen/normal_text" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/padding"
                android:layout_marginEnd="@dimen/padding"
                android:hint="@string/create_acc_placeholder_email"
                app:startIconDrawable="@drawable/outline_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_input"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:minHeight="@dimen/login_min_height" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/text_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email_layout"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/padding"
                android:layout_marginTop="@dimen/padding"
                android:text="@string/password"
                android:textSize="@dimen/normal_text" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_password"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/padding"
                android:layout_marginEnd="@dimen/padding"
                android:hint="@string/enter_password"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/outline_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_input"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:minHeight="@dimen/login_min_height" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/error_8_char"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password_layout"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/padding"
                android:layout_marginTop="@dimen/padding"
                android:drawableLeft="@drawable/ic_alert_icon"
                android:drawablePadding="5dp"
                android:drawableTint="@color/colorPrimaryDark"
                android:text="@string/create_acc_error_8_char"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/normal_text" />

            <TextView
                android:id="@+id/error_upper_lower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/error_8_char"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/padding"
                android:layout_marginTop="@dimen/padding"
                android:drawableLeft="@drawable/ic_alert_icon"
                android:drawablePadding="5dp"
                android:drawableTint="@color/colorPrimaryDark"
                android:text="@string/create_acc_error_both_upper_lower"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/normal_text" />

            <TextView
                android:id="@+id/error_num_symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/error_upper_lower"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/padding"
                android:layout_marginTop="@dimen/padding"
                android:drawableLeft="@drawable/ic_alert_icon"
                android:drawablePadding="5dp"
                android:drawableTint="@color/colorPrimaryDark"
                android:text="@string/create_acc_error_one_symbol"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/normal_text" />

            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_margin"
                android:layout_below="@+id/error_num_symbol"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/padding"
                android:layout_marginTop="@dimen/padding"
                android:layout_marginEnd="@dimen/padding"
                android:clickable="false"
                android:drawableRight="@drawable/ic_arrow_right"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textSize="@dimen/normal_text"
                app:cornerRadius="@dimen/corner_radius" />

        </RelativeLayout>
    </ScrollView>
</layout>