<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/textWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/title_margin"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textColor="@color/colorTextHeader"
                android:textSize="@dimen/login_title_text" />

            <TextView
                android:id="@+id/textEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textWelcome"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/padding"
                android:layout_marginTop="@dimen/title_margin"
                android:layout_marginEnd="@dimen/padding"
                android:text="@string/email"
                android:textSize="@dimen/normal_text" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textEmailLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textEmail"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/padding"
                android:layout_marginEnd="@dimen/padding"
                android:hint="@string/enter_email"
                android:minHeight="@dimen/login_min_height"
                app:startIconDrawable="@drawable/person">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/textPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textEmailLayout"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/padding"
                android:layout_marginTop="@dimen/padding"
                android:text="@string/password"
                android:textSize="@dimen/normal_text" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textPasswordLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textPassword"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/padding"
                android:layout_marginEnd="@dimen/padding"
                android:hint="@string/enter_password"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/outline_lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:minHeight="@dimen/login_min_height" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textForgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textPasswordLayout"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/padding"
                android:layout_marginTop="@dimen/margin_top_text"
                android:layout_marginEnd="@dimen/padding"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/normal_text" />

            <Button
                android:id="@+id/loginButton"
                style="@style/Widget.Material3.Button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_margin"
                android:layout_below="@+id/textForgot"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/padding"
                android:layout_marginTop="@dimen/padding"
                android:layout_marginEnd="@dimen/padding"
                android:layout_toStartOf="@+id/fingerprintButton"
                android:drawableRight="@drawable/ic_arrow_right"
                android:gravity="center"
                android:text="@string/intro_login_button"
                android:textSize="@dimen/normal_text"
                app:cornerRadius="@dimen/corner_radius" />

            <Button
                android:id="@+id/fingerprintButton"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="@dimen/title_margin"
                android:layout_height="@dimen/title_margin"
                android:layout_below="@+id/textForgot"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/padding"
                android:layout_marginEnd="@dimen/padding"
                android:background="@drawable/baseline_fingerprint_24"
                android:backgroundTint="@color/black" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loginButton"
                android:layout_marginVertical="@dimen/padding"
                android:gravity="center">

                <TextView
                    android:id="@+id/account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account" />

                <TextView
                    android:id="@+id/signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/text_margin_start"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorPrimaryDark" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</layout>